gcc/testsuite/gdc.test/compilable/test19912.d
// PERMUTE_ARGS:
import object;
void fun(string) { }
