gcc/testsuite/gdc.test/fail_compilation/fail8168.d
void main() {
    asm {
        unknown; // wrong opcode
    }
}

